<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/nav_all_tasks"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/all_tasks" />

        <item
            android:id="@+id/nav_all_users"
            android:icon="@drawable/person"
            android:title="@string/all_users" />

        <item
            android:id="@+id/nav_create_task"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/create_task" />

    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@android:drawable/ic_menu_myplaces"
                android:title="@string/profile" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/settings" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>